# fzbuku.py

./: bm  main.py  pyproject.toml
