[tool.poetry]
name = "bookmarkmanager"
version = "0.1.0"
description = "bookmark manager similar to buku using fzf and prompt toolkit"
authors = ["DanielFGray <DanielFGray@gmail.com>"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.6.1"
prompt_toolkit = "^3.0.5"
beautifulsoup4 = "^4.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
